--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 	    <version>2.9.0</version>
 	</dependency>
     <dependency>
-	    <groupId>org.apache.tomcat.embed</groupId>
-	    <artifactId>tomcat-embed-core</artifactId>
-	    <version>8.5.5</version>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.0.1</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.springframework</groupId>
